--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -510,7 +510,7 @@
   <!-- Alineación Probable -->
   <div class="seccion">
     <h3>Alineación Probable</h3>
-    <div class="formacion-titulo">4-3-3</div>
+    <div class="formacion-titulo">4-2-3-1</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -536,13 +536,15 @@
         ],
         'mediocentros': [
           { number: '2', name: 'Á. Brito' },
-          { number: '19', name: 'Pablo' },
+          { number: '19', name: 'Pablo' }
+        ],
+        'mediapuntas': [
+          { number: '7', name: 'J. Martínez' },
           { number: '23', name: 'Javi Pardo' }
+          { number: '24', name: 'H. Panizo' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez' },
-          { number: '18', name: 'Manu de V.' },
-          { number: '24', name: 'H. Panizo' }
+          { number: '18', name: 'Manu de V.' }
         ]
       };
 
@@ -590,7 +592,7 @@
 
   <!-- Alineación Confirmada -->
   <div class="seccion">
-    <h3>✅ Alineación Confirmada</h3>
+    <h3>Alineación Confirmada</h3>
 
     <div class="container-responsive">
       <div class="header-responsive">
@@ -897,5 +899,6 @@
 
 </body>
 </html>
+
 
 
