--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -757,8 +757,8 @@
     </script>
   </div>
 
-  <!--
-  <!-- Goles -->
+  
+  <!-- Goles 
   <div class="seccion">
     <h3>Goles a Favor</h3>
     <div class="goles-lista">
@@ -772,8 +772,7 @@
         <span class="minuto">67'</span> - Juan Pérez (Penalti)
       </div>
     </div>
-  </div>
-  -->
+  </div> -->
 
   <!-- Cambios -->
   <div class="seccion">
@@ -899,6 +898,7 @@
 
 </body>
 </html>
+
 
 
 
