--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -538,7 +538,7 @@
           { number: '2', name: 'Á. Brito' },
           { number: '19', name: 'Pablo' }
         ],
-        'mediapuntas': [
+        'mediocentros': [
           { number: '7', name: 'J. Martínez' },
           { number: '23', name: 'Javi Pardo' }
           { number: '24', name: 'H. Panizo' }
@@ -898,6 +898,7 @@
 
 </body>
 </html>
+
 
 
 
