--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -534,11 +534,11 @@
           { number: '25', name: 'Rodri' },
           { number: '17', name: 'J. Zarcero' }
         ],
-        'mediocentros': [
+        'mediocentrosDefensivos': [
           { number: '2', name: 'Á. Brito' },
           { number: '19', name: 'Pablo' }
         ],
-        'mediocentros': [
+        'mediocentrosOfensivos': [
           { number: '7', name: 'J. Martínez' },
           { number: '23', name: 'Javi Pardo' }
           { number: '24', name: 'H. Panizo' }
@@ -552,7 +552,8 @@
       const formations = {
         '4-2-3-1': [
           playersProbable.delanteros,
-          playersProbable.mediocentros,
+          playersProbable.mediocentrosOfensivos,
+          playersProbable.mediocentrosDefensivos,
           playersProbable.defensas,
           playersProbable.portero
         ]
@@ -898,6 +899,7 @@
 
 </body>
 </html>
+
 
 
 
