--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -510,7 +510,7 @@
   <!-- Alineación Probable -->
   <div class="seccion">
     <h3>Alineación Probable</h3>
-    <div class="formacion-titulo">4-2-3-1</div>
+    <div class="formacion-titulo">4-3-3</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -536,23 +536,20 @@
         ],
         'mediocentros': [
           { number: '2', name: 'Á. Brito' },
-          { number: '19', name: 'Pablo' }
-        ],
-        'mediocentros': [
-          { number: '7', name: 'J. Martínez' },
+          { number: '10', name: 'Kito' },
           { number: '23', name: 'Javi Pardo' }
-          { number: '24', name: 'H. Panizo' }
         ],
         'delanteros': [
-          { number: '18', name: 'Manu de V.' }
+          { number: '7', name: 'J. Martínez' },
+          { number: '18', name: 'Manu de V.' },
+          { number: '24', name: 'H. Panizo' }
         ]
       };
 
       // Configuraciones de formaciones
       const formations = {
-        '4-2-3-1': [
+        '4-3-3': [
           playersProbable.delanteros,
-          playersProbable.mediocentros,
           playersProbable.mediocentros,
           playersProbable.defensas,
           playersProbable.portero
@@ -587,7 +584,7 @@
       }
 
       // Renderizar formación para alineación probable
-      renderFormationProbable('4-2-3-1');
+      renderFormationProbable('4-3-3');
     </script>
   </div>
 
@@ -899,6 +896,7 @@
 
 </body>
 </html>
+
 
 
 
