--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -540,7 +540,7 @@
           { number: '23', name: 'Javi Pardo' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez' },
+          { number: '14', name: 'J. Ogayar' },
           { number: '18', name: 'Manu de V.' },
           { number: '24', name: 'H. Panizo' }
         ]
@@ -896,6 +896,7 @@
 
 </body>
 </html>
+
 
 
 
