--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -159,7 +159,7 @@
     <img src="Jornada4.jpg" alt="Jornada 4">
     <div class="info">
       <h2>Jornada 4</h2>
-      <a href="InformeJ1" target="_blank">Ver Informe</a>
+      
     </div>
   </div>
 
@@ -183,7 +183,7 @@
     <img src="Jornada1.jpg" alt="Jornada 1">
     <div class="info">
       <h2>Jornada 1</h2>
-      <a href="https://docs.google.com/document/d/1hMSLiXhlGXMEVsHO0jyivQy9-d58nVq0K5ue4hCGWl8/edit?usp=sharing" target="_blank">Ver Informe</a>
+      <a href="InformeJ1.html" target="_blank">Ver Informe</a>
     </div>
   </div>
 
