--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jornada 4 - Informe Completo</title>
+  <title>Informe Jornada 1</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
@@ -896,6 +896,7 @@
 
 </body>
 </html>
+
 
 
 
