--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -175,7 +175,7 @@
     <img src="Jornada2.jpg" alt="Jornada 2">
     <div class="info">
       <h2>Jornada 2</h2>
-      <a href="https://docs.google.com/document/d/1VYid3BT4yq0PUi31oBOSuoZFteSaacPbBb6GNGI_V14/edit?usp=sharing" target="_blank">Ver Informe</a>
+      <a href="InformeJ2.html" target="_blank">Ver Informe</a>
     </div>
   </div>
 
