--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -167,7 +167,7 @@
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
       <h2>Jornada 3</h2>
-      <a href="https://docs.google.com/document/d/1XX0JFD742j8KjX7tQ4rwxBj6aEYDFII7ecaEPn_T-CY/edit?usp=sharing" target="_blank">Ver Informe</a>
+      <a href="InformeJ3.html" target="_blank">Ver Informe</a>
     </div>
   </div>
 
