--- a/InformeJ3.html
+++ b/InformeJ3.html
@@ -741,7 +741,8 @@
           `;
 
           benchContainer.appendChild(benchPlayerElement);
-
+          });
+        
           // Aplicar colores a los ratings del banquillo
         document.querySelectorAll('.bench-player-rating-responsive').forEach(ratingElement => {
           const rating = ratingElement.textContent;
@@ -760,7 +761,12 @@
     <h3>Goles a Favor</h3>
     <div class="goles-lista">
       <div class="gol">
-        <span class="minuto">89'</span> - S. Griñán
+        <span class="minuto">2'</span> - J. Martínez (Asistencia: Kito)
+      </div>
+    </div>
+    <div class="goles-lista">
+      <div class="gol">
+        <span class="minuto">9'</span> - S. Griñán (p.)
       </div>
     </div>
   </div>
