--- a/InformeJ3.html
+++ b/InformeJ3.html
@@ -776,51 +776,43 @@
     <h3>Cambios Realizados</h3>
     <div class="cambios-lista">
       <div class="cambio">
-        <span class="minuto">54'</span>
+        <span class="minuto">63'</span>
         <div class="jugadores-cambio">
-          <span>J. Agudo</span>
+          <span>Jacobo</span>
           <span class="flecha">→</span>
-          <span>Álvaro</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">64'</span>
-        <div class="jugadores-cambio">
           <span>Adriano</span>
-          <span class="flecha">→</span>
-          <span>Rafa Crooke</span>
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto">64'</span>
+        <span class="minuto">63'</span>
         <div class="jugadores-cambio">
+          <span>Víctor Jaén</span>
+          <span class="flecha">→</span>
+          <span>J. Ogayar</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">63'</span>
+        <div class="jugadores-cambio">
+          <span>J. Martínez</span>
+          <span class="flecha">→</span>
           <span>H. Panizo</span>
+        </div>
+      </div>
+      <div class="cambio">
+        <span class="minuto">63'</span>
+        <div class="jugadores-cambio">
+          <span>S. Griñán</span>
           <span class="flecha">→</span>
           <span>Manu de V.</span>
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto">75'</span>
-        <div class="jugadores-cambio">
-          <span>A. Molina</span>
-          <span class="flecha">→</span>
-          <span>L. Lausín</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">75'</span>
+        <span class="minuto">70'</span>
         <div class="jugadores-cambio">
           <span>Kito</span>
           <span class="flecha">→</span>
-          <span>Víctor Jaén</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">75'</span>
-        <div class="jugadores-cambio">
-          <span>Á. Brito</span>
-          <span class="flecha">→</span>
-          <span>J. Ogayar</span>
+          <span>L. Lausín</span>
         </div>
       </div>
     </div>
@@ -829,7 +821,7 @@
   <!-- Once Final -->
   <div class="seccion">
     <h3>Once Final</h3>
-    <div class="formacion-titulo">4-4-2</div>
+    <div class="formacion-titulo">4-3-3</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -849,25 +841,25 @@
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
-          { number: '6', name: 'Rafa Crooke' },
+          { number: '5', name: 'Adriano' },
           { number: '25', name: 'Rodri' },
-          { number: '12', name: 'L. Lausín' }
+          { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
-          { number: '7', name: 'J. Martínez' },
-          { number: '23', name: 'Javi Pardo' },
-          { number: '21', name: 'Víctor Jaén' },
-          { number: '14', name: 'J. Ogayar' }
+          { number: '14', name: 'J. Ogayar' },
+          { number: '2', name: 'Kito' },
+          { number: '23', name: 'Javi Pardo' }
         ],
         'delanteros': [
+          { number: '12', name: 'L. Lausín' },
           { number: '18', name: 'Manu de V.' },
-          { number: '9', name: 'S. Griñán' },
+          { number: '24', name: 'H. Panizo' }
         ]
       };
 
       // Configuraciones de formaciones
       const formationsFinal = {
-        '4-4-2': [
+        '4-3-3': [
           playersFinal.delanteros,
           playersFinal.mediocentros,
           playersFinal.defensas,
@@ -903,7 +895,7 @@
       }
 
       // Renderizar formación para once final
-      renderFormationFinal('4-4-2');
+      renderFormationFinal('4-3-3');
     </script>
   </div>
 
