--- a/InformeJ3.html
+++ b/InformeJ3.html
@@ -645,12 +645,12 @@
       // Datos del banquillo
       const benchPlayers = [
         { number: '13', name: 'Álvaro', rating: '-' },
-        { number: '5', name: 'Adriano', rating: '-' },
+        { number: '5', name: 'Adriano', rating: '6,5' },
         { number: '20', name: 'A. Molina', rating: '-' },
-        { number: '12', name: 'L. Lausín', rating: '-' },
-        { number: '14', name: 'J. Ogayar', rating: '-' },
-        { number: '24', name: 'H. Panizo', rating: '-' },
-        { number: '18', name: 'Manu de V.', rating: '-' }
+        { number: '12', name: 'L. Lausín', rating: '6,5' },
+        { number: '14', name: 'J. Ogayar', rating: '6,4' },
+        { number: '24', name: 'H. Panizo', rating: '6,9' },
+        { number: '18', name: 'Manu de V.', rating: '6,3' }
       ];
 
       // Configuraciones de formaciones
@@ -837,7 +837,7 @@
       // Datos de los jugadores organizados por posición - ONCE FINAL
       const playersFinal = {
         'portero': [
-          { number: '13', name: 'Álvaro' }
+          { number: '1', name: 'Gabri' }
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
@@ -847,7 +847,7 @@
         ],
         'mediocentros': [
           { number: '14', name: 'J. Ogayar' },
-          { number: '2', name: 'Kito' },
+          { number: '2', name: 'Á. Brito' },
           { number: '23', name: 'Javi Pardo' }
         ],
         'delanteros': [
