--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -134,31 +134,31 @@
   // Datos de los jugadores con los minutos jugados en cada partido
   const jugadores = [
     {nombre: "Muestra de la función", goles: 11, asistencias: 3, minutos: [66, 33, 90, 0, 22]},
-    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54]},
-    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36]},
-    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90]},
-    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: [90, 90]},
-    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26]},
-    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90]},
-    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64]},
-    {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75]},
-    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15]},
-    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0]},
-    {nombre: "Kito", goles: 0, asistencias: 0, minutos: [90, 75]},
-    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15]},
-    {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75]},
-    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0]},
-    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90]},
-    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15]},
-    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Panizo", goles: 0, asistencias: 0, minutos: [45, 64]},
-    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0]},
-    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: [45, 26]},
-    {nombre: "Griñán", goles: 1, asistencias: 0, minutos: [45, 90]}
+    {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0]},
+    {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90]},
+    {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0]},
+    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90]},
+    {nombre: "Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63]},
+    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0]},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63]},
+    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: [90, 90, 90]},
+    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: [90, 64, 27]},
+    {nombre: "Infante", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
+    {nombre: "Molina", goles: 0, asistencias: 0, minutos: [45, 75, 0]},
+    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: [0, 15, 20]},
+    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: [90, 0, 90]},
+    {nombre: "Kito", goles: 0, asistencias: 1, minutos: [90, 75, 70]},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: [21, 15, 63]},
+    {nombre: "Brito", goles: 0, asistencias: 0, minutos: [72, 75, 90]},
+    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: [69, 0, 0]},
+    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: [0, 90, 90]},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
+    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: [18, 15, 27]},
+    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
+    {nombre: "H. Panizo", goles: 0, asistencias: 0, minutos: [45, 64, 27]},
+    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: [0, 0, 0]},
+    {nombre: "Manu de V.", goles: 0, asistencias: 0, minutos: [45, 26, 27]},
+    {nombre: "S. Griñán", goles: 2, asistencias: 0, minutos: [45, 90, 63]}
   ];
 
   // Generar las tarjetas de los jugadores
