--- a/InformeJ4.html
+++ b/InformeJ4.html
@@ -503,8 +503,8 @@
   <a href="InformesPost_partido.html" class="btn-volver">← Volver a Todos los Informes</a>
 
   <div class="header-informe">
-    <h1>Informe Jornada 3</h1>
-    <div class="resultado-principal">Gimnástica Colmenarejo 4-2 EFMO Boadilla 'B'</div>
+    <h1>Informe Jornada 4</h1>
+    <div class="resultado-principal">EFMO Boadilla 'B' - Puerta de Madrid 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
