--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <a href="Encuestas_MVP2526.html" target="_blank" class="panel">
     <div class="panel-icon"><i class="fas fa-star"></i></div>
-    <div class="panel-title">Encuestas MVP 25/26</div>
+    <div class="panel-title">Encuestas MVP</div>
   </a>
 
   <a href="https://sofifa.com/user/36295111/players" target="_blank" class="panel">
