--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -169,7 +169,8 @@
     <img src="Jornada1.jpg" alt="Jornada 1">
     <div class="info">
       <h2>Jornada 1</h2>
-      <a href="https://docs.google.com/document/d/1GbBQJ9tJLsvOQ-UiH0B0CwADG65vRMCfxA41qxSeo88/edit?usp=sharing" target="_blank">Ver Resultados</a>
+      <a href="MVP_J1.html" target="_blank">Ver Resultados</a>
+      <!-- <a href="https://docs.google.com/document/d/1GbBQJ9tJLsvOQ-UiH0B0CwADG65vRMCfxA41qxSeo88/edit?usp=sharing" target="_blank">Ver Resultados</a> -->
     </div>
   </div>
 
