--- a/MVP_J1.html
+++ b/MVP_J1.html
@@ -185,13 +185,12 @@
     // Datos de ejemplo - ¡MODIFICA ESTOS DATOS SEGÚN TUS RESULTADOS!
     const resultsData = {
       jornada: "Jornada 1",
-      totalVotes: 85, // Cambia este número por el total real de votos
+      totalVotes: 12, // Cambia este número por el total real de votos
       players: [
-        { name: "Jugador A", votes: 42 },
-        { name: "Jugador B", votes: 18 },
-        { name: "Jugador C", votes: 12 },
-        { name: "Jugador D", votes: 8 },
-        { name: "Jugador E", votes: 5 }
+        { name: "Adriano", votes: 7 },
+        { name: "J. Zarcero", votes: 2 },
+        { name: "Kito", votes: 2 },
+        { name: "S. Griñán", votes: 1 }
       ]
     };
 
