--- a/MVP_J1.html
+++ b/MVP_J1.html
@@ -178,7 +178,7 @@
     
     <div class="total-votes" id="total-votes">Total de votos: <span id="total-count">0</span></div>
     
-    <a href="EncuestasMVP2526.html" class="back-button">Volver a Encuestas</a>
+    <a href="Encuestas_MVP2526.html" class="back-button">Volver a Encuestas</a>
   </div>
 
   <script>
