--- a/Encuestas_MVP2526.html
+++ b/Encuestas_MVP2526.html
@@ -153,7 +153,7 @@
     <img src="Jornada3.jpg" alt="Jornada 3">
     <div class="info">
       <h2>Jornada 3</h2>
-      
+      <a href="https://forms.gle/GMNCJfzHejUypXAZ9" target="_blank">Votación</a>
     </div>
   </div>
 
@@ -170,7 +170,6 @@
     <div class="info">
       <h2>Jornada 1</h2>
       <a href="MVP_J1.html" target="_blank">Ver Resultados</a>
-      <!-- <a href="https://docs.google.com/document/d/1GbBQJ9tJLsvOQ-UiH0B0CwADG65vRMCfxA41qxSeo88/edit?usp=sharing" target="_blank">Ver Resultados</a> -->
     </div>
   </div>
 
