--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -104,7 +104,7 @@ const players = [
     {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}]},
   
-  { id:2, name:'Gabri', pos:'Portero', status:'Duda', performances:[
+  { id:2, name:'Gabri', pos:'Portero', status:'OK', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'}]},
@@ -129,7 +129,7 @@ const players = [
     {points:null, minutes:26, goals:0, assists:0, caent:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}]},
   
-  { id:7, name:'Jacobo', pos:'Defensa', status:'OK', performances:[
+  { id:7, name:'Jacobo', pos:'Defensa', status:'Lesionado', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
     {points:5, minutes:63, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'}]},
@@ -227,6 +227,7 @@ const players = [
 
 // 📰 Noticias del equipo
 const news = [
+  { playerId: 7, title: 'Lesión', text: "Molestias en los hombros, 2 semanas" },
   { playerId: 24, title: 'Duda', text: "Molestias en la rodilla, desconocido" },
   { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-10 días" },
   { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'" },
@@ -237,7 +238,6 @@ const news = [
   { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 2-4 semanas" },
   { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
   { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 3-6 semanas" },
-  { playerId: 2, title: 'Duda', text: "Enfermedad, 2-7 días" },
   { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
   { playerId: 19, title: 'Lesión', text: "Lesión en los isquios, 4-6 semanas" },
   { playerId: 21, title: 'Lesión', text: "Desconocido, 1 mes" }
