--- a/MVP_J1.html
+++ b/MVP_J1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Resultados Jornada 1</title>
+<title>MVP Jornada 1</title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
@@ -170,7 +170,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Resultados Jornada 1</h1>
+    <h1>MVP Jornada 1</h1>
     
     <div id="results-container">
       <!-- Los resultados se generarán automáticamente con JavaScript -->
