--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -172,7 +172,7 @@ const players = [
   { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
     {points:2, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
     {points:null, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
-    {points:4, minutes:63, goals:0, assists:0, cards:'🟨↪️ (6,8)'}]},
+    {points:4, minutes:63, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,8)'}]},
   
   { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', performances:[
     {points:7, minutes:72, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
