--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -126,7 +126,7 @@ const players = [
   
   { id:6, name:'Rafa Crooke', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-    {points:null, minutes:26, goals:0, assists:0, caent:'↩️ (Sin grabación)'},
+    {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}]},
   
   { id:7, name:'Jacobo', pos:'Defensa', status:'Lesionado', performances:[
