--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -122,7 +122,7 @@ const players = [
   { id:5, name:'J. Martínez', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
     {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
-    {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️🟢 (7,3+🟢)'}]},
+    {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'}]},
   
   { id:6, name:'Rafa Crooke', pos:'Defensa', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -221,8 +221,8 @@ const players = [
   
   { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', performances:[
     {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
-    {points:null, minutes:90, goals:1, assists:0, cards:1, comment:'🟨🟢 (Sin grabación)'},
-    {points:7, minutes:63, goals:1, assists:0, cards:0, comment:'↪️🟢⬆️ (6,8+🟢⬆️)'}]}
+    {points:null, minutes:90, goals:1, assists:0, cards:1, comment:'🟨⚽ (Sin grabación)'},
+    {points:7, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (6,8+⚽🅿️)'}]}
 ];
 
 // 📰 Noticias del equipo
