--- a/InformeJ1.html
+++ b/InformeJ1.html
@@ -622,23 +622,23 @@
       // Datos de los jugadores organizados por posición - ALINEACIÓN CONFIRMADA
       const playersConfirmada = {
         'portero': [
-          { number: '13', name: 'Álvaro', rating: 6.5 }
+          { number: '13', name: 'Álvaro', rating: '6,5' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: 7.2 },
-          { number: '5', name: 'Adriano', rating: 7.8 },
-          { number: '25', name: 'Rodri', rating: 6.4 },
-          { number: '17', name: 'J. Zarcero', rating: 7.0 }
+          { number: '16', name: 'Luisja', rating: '7,2' },
+          { number: '5', name: 'Adriano', rating: '7,8' },
+          { number: '25', name: 'Rodri', rating: '6,4' },
+          { number: '17', name: 'J. Zarcero', rating: '7,0' }
         ],
         'mediocentros': [
-          { number: '2', name: 'Á. Brito', rating: 7.5 },
-          { number: '10', name: 'Kito', rating: 7.3 },
-          { number: '19', name: 'Pablo', rating: 6.9 }
+          { number: '2', name: 'Á. Brito', rating: '7,5' },
+          { number: '10', name: 'Kito', rating: '7,3' },
+          { number: '19', name: 'Pablo', rating: '6,9' }
         ],
         'delanteros': [
-          { number: '7', name: 'J. Martínez', rating: 6.7 },
-          { number: '18', name: 'Manu de V.', rating: 6.3 },
-          { number: '24', name: 'H. Panizo', rating: 6.9 }
+          { number: '7', name: 'J. Martínez', rating: '6,7' },
+          { number: '18', name: 'Manu de V.', rating: '6,3' },
+          { number: '24', name: 'H. Panizo', rating: '6,9' }
         ]
       };
 
@@ -647,10 +647,10 @@
         { number: '1', name: 'Gabri', rating: '-' },
         { number: '6', name: 'Rafa Crooke', rating: '-' },
         { number: '15', name: 'Jacobo', rating: '-' },
-        { number: '14', name: 'J. Ogayar', rating: 6.3 },
-        { number: '21', name: 'Víctor Jaén', rating: 6.4 },
-        { number: '20', name: 'A. Molina', rating: 6.8 },
-        { number: '9', name: 'S. Griñán', rating: 6.6 }
+        { number: '14', name: 'J. Ogayar', rating: '6,3' },
+        { number: '21', name: 'Víctor Jaén', rating: '6,4' },
+        { number: '20', name: 'A. Molina', rating: '6,8' },
+        { number: '9', name: 'S. Griñán', rating: '6,6' }
       ];
 
       // Configuraciones de formaciones
@@ -896,6 +896,7 @@
 
 </body>
 </html>
+
 
 
 
