--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -189,7 +189,7 @@ const players = [
     {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
     {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}]},
   
-  { id:19, name:'Mario', pos:'Centrocampista', status:'Lesionado', performances:[
+  { id:19, name:'Mario', pos:'Centrocampista', status:'Duda', performances:[
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}]},
@@ -214,7 +214,7 @@ const players = [
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
     {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}]},
   
-  { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Duda', performances:[
+  { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Lesionado', performances:[
     {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
     {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
     {points:1, minutes:27, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'}]},
@@ -228,8 +228,8 @@ const players = [
 // 📰 Noticias del equipo
 const news = [
   { playerId: 7, title: 'Lesión', text: "Molestias en los hombros, 2 semanas" },
-  { playerId: 24, title: 'Duda', text: "Molestias en la rodilla, desconocido" },
-  { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-10 días" },
+  { playerId: 24, title: 'Lesión', text: "Edema óseo, 2-3 semanas" },
+  { playerId: 9, title: 'Duda', text: "Molestias en el talón, 2-15 días" },
   { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo 4-2 E.F.M.O. Boadilla 'B'" },
   { playerId: 10, title: 'Duda', text: "Enfermedad, 2-7 días" },
   { playerId: 6, title: 'Duda', text: "Enfermedad, 3-7 días" },
@@ -239,8 +239,8 @@ const news = [
   { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones" },
   { playerId: 17, title: 'Lesión', text: "Fractura de muñeca, 3-6 semanas" },
   { playerId: null, title: 'Jornada 1', text: "Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'" },
-  { playerId: 19, title: 'Lesión', text: "Lesión en los isquios, 4-6 semanas" },
-  { playerId: 21, title: 'Lesión', text: "Desconocido, 1 mes" }
+  { playerId: 19, title: 'Duda', text: "Lesión en los isquios, 4-6 semanas" },
+  { playerId: 21, title: 'Lesión', text: "Lesión de ingle, 1 mes" }
 ];
   
 // Render helpers
