--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="panel-title">Informes post-partido</div>
   </a>
 
-  <a href="StatsTemp25-26.html" target="_blank" class="panel">
+  <a href="Stats25-26.html" target="_blank" class="panel">
     <div class="panel-icon"><i class="fas fa-chart-line"></i></div>
     <div class="panel-title">Stats Temp. 25/26</div>
   </a>
