--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -308,7 +308,7 @@
       border-radius: 12px;
       transition: var(--transition);
       color: white;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      /* QUITADA LA SOMBRA */
       border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
@@ -322,7 +322,7 @@
 
     .match-item:hover {
       transform: scale(1.05);
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
+      /* QUITADA LA SOMBRA EN HOVER TAMBIÉN */
     }
 
     .match-journey {
