--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -425,6 +425,7 @@
     // Datos de los jugadores con los minutos jugados en cada partido
     const jugadores = [
       {nombre: "Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0]},
+      {nombre: "Prueba", goles: 0, asistencias: 0, minutos: [0, 54, 0, 90, 90, 10, 50, 60, 10, 20, 30, 33]},
       {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90]},
       {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0]},
       {nombre: "Luisja", goles: 0, asistencias: 0, minutos: [90, 90, 90]},
